--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,13 +14,12 @@ on:
 
  
 jobs:
-  my_ci_step:
+  my_ci_part:
     runs-on: ubuntu-latest
  
     steps: 
       - name: Git CI
         uses: actions/checkout@v2
   
-
       - name: zip
-        run: zip -r ${{ env.DEPLOY_PACKAGE_NAME }} ./ -x *.git*
+        run : zip -r ${{ env.DEPLOY_PACKAGE_NAME }} ./ -x *.git*
